--- a/app/src/main/res/layout/fragment_register_choose_password.xml
+++ b/app/src/main/res/layout/fragment_register_choose_password.xml
@@ -1,11 +1,11 @@
-<com.q20.projectsummer.ResponsiveViews.ResponsiveRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.non_android_programmers.responsivegui.ResponsiveRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/register_fragment_shape"
     tools:context="com.q20.projectsummer.ui.RegisterChoosePasswordFragment">
 
-    <com.q20.projectsummer.ResponsiveViews.ResponsiveRelativeLayout
+    <com.non_android_programmers.responsivegui.ResponsiveRelativeLayout
         android:layout_width="@dimen/register_main_profile_image_shape"
         android:layout_height="@dimen/register_main_profile_image_shape"
         android:layout_marginLeft="125dp"
@@ -13,7 +13,7 @@
         android:background="@drawable/register_image_veiw_shape"
         android:gravity="center">
 
-        <com.q20.projectsummer.ResponsiveViews.ResponsiveImageView
+        <com.non_android_programmers.responsivegui.ResponsiveImageView
             android:id="@+id/register_password_profile_image"
             android:layout_width="100dp"
             android:layout_height="100dp"
@@ -21,7 +21,7 @@
             android:layout_marginRight="10dp"
             android:layout_marginTop="5dp"
             android:tag="@drawable/char_m_40" />
-    </com.q20.projectsummer.ResponsiveViews.ResponsiveRelativeLayout>
+    </com.non_android_programmers.responsivegui.ResponsiveRelativeLayout>
 
     <com.q20.projectsummer.Custom.AutoResizeTextViewWithAfsanehFont
         android:id="@+id/register_password_page_username_text_view"
@@ -48,7 +48,7 @@
         android:textColor="@color/colorA17"
         android:textSize="@dimen/total_recycler_text_size" />
 
-    <com.q20.projectsummer.ResponsiveViews.ResponsiveEditText
+    <com.non_android_programmers.responsivegui.ResponsiveEditText
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginLeft="16dp"
@@ -59,7 +59,7 @@
         android:hint="@string/password"
         android:inputType="numberPassword" />
 
-    <com.q20.projectsummer.ResponsiveViews.ResponsiveEditText
+    <com.non_android_programmers.responsivegui.ResponsiveEditText
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginLeft="16dp"
@@ -70,7 +70,7 @@
         android:hint="@string/repeated_password"
         android:inputType="numberPassword" />
 
-    <com.q20.projectsummer.ResponsiveViews.ResponsiveImageView
+    <com.non_android_programmers.responsivegui.ResponsiveImageView
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginLeft="16dp"
@@ -90,4 +90,4 @@
         android:text="@string/end_register"
         android:textSize="@dimen/buttons_text_size" />
 
-</com.q20.projectsummer.ResponsiveViews.ResponsiveRelativeLayout>
+</com.non_android_programmers.responsivegui.ResponsiveRelativeLayout>
