--- a/app/src/main/res/layout/activity_find_rival.xml
+++ b/app/src/main/res/layout/activity_find_rival.xml
@@ -7,23 +7,23 @@
     android:background="@color/colorA7"
     tools:context="com.q20.projectsummer.ui.FindRivalActivity">
 
-    <com.q20.projectsummer.ResponsiveViews.ResponsiveRelativeLayout
+    <com.non_android_programmers.responsivegui.ResponsiveRelativeLayout
         android:layout_width="55dp"
         android:layout_height="55dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/profile_image_rounded_layout_shape">
 
-        <com.q20.projectsummer.ResponsiveViews.ResponsiveImageView
+        <com.non_android_programmers.responsivegui.ResponsiveImageView
             android:id="@+id/find_rival_main_profile_image"
             android:layout_width="43dp"
             android:layout_height="43dp"
             android:layout_marginLeft="6dp"
             android:layout_marginTop="6dp"
             android:src="@drawable/char_f_15" />
-    </com.q20.projectsummer.ResponsiveViews.ResponsiveRelativeLayout>
+    </com.non_android_programmers.responsivegui.ResponsiveRelativeLayout>
 
-    <com.q20.projectsummer.ResponsiveViews.ResponsiveImageView
+    <com.non_android_programmers.responsivegui.ResponsiveImageView
         android:id="@+id/find_rival_coin"
         android:layout_width="50dp"
         android:layout_height="50dp"
@@ -31,7 +31,7 @@
         android:layout_marginTop="16dp"
         android:src="@drawable/coin" />
 
-    <com.q20.projectsummer.ResponsiveViews.ResponsiveCardView
+    <com.non_android_programmers.responsivegui.ResponsiveCardView
         android:id="@+id/find_rival_rival_find_name_cardview"
         android:layout_width="379dp"
         android:layout_height="80dp"
@@ -42,7 +42,7 @@
         app:cardCornerRadius="@dimen/btn_radius">
 
 
-        <com.q20.projectsummer.ResponsiveViews.ResponsiveCardView
+        <com.non_android_programmers.responsivegui.ResponsiveCardView
             android:id="@+id/find_name_cardview_in_cardview"
             android:layout_width="283dp"
             android:layout_height="66dp"
@@ -64,9 +64,9 @@
                 android:maxLines="1"
                 android:text="@string/find_name"
                 android:textSize="@dimen/total_recycler_text_size" />
-        </com.q20.projectsummer.ResponsiveViews.ResponsiveCardView>
+        </com.non_android_programmers.responsivegui.ResponsiveCardView>
 
-        <com.q20.projectsummer.ResponsiveViews.ResponsiveRelativeLayout
+        <com.non_android_programmers.responsivegui.ResponsiveRelativeLayout
             android:layout_width="72dp"
             android:layout_height="72dp"
             android:layout_marginLeft="297dp"
@@ -82,12 +82,12 @@
                 android:layout_marginTop="0dp"
                 android:scaleType="centerInside"
                 android:src="@drawable/magnifire" />
-        </com.q20.projectsummer.ResponsiveViews.ResponsiveRelativeLayout>
+        </com.non_android_programmers.responsivegui.ResponsiveRelativeLayout>
 
 
-    </com.q20.projectsummer.ResponsiveViews.ResponsiveCardView>
+    </com.non_android_programmers.responsivegui.ResponsiveCardView>
 
-    <com.q20.projectsummer.ResponsiveViews.ResponsiveCardView
+    <com.non_android_programmers.responsivegui.ResponsiveCardView
         android:id="@+id/find_rival_rival_find_chance_rival"
         android:layout_width="379dp"
         android:layout_height="80dp"
@@ -98,7 +98,7 @@
         app:cardCornerRadius="@dimen/btn_radius">
 
 
-        <com.q20.projectsummer.ResponsiveViews.ResponsiveCardView
+        <com.non_android_programmers.responsivegui.ResponsiveCardView
             android:id="@+id/find_rival_find_chance_rival_cardview"
             android:layout_width="283dp"
             android:layout_height="66dp"
@@ -119,9 +119,9 @@
                 android:maxLines="1"
                 android:text="@string/find_chance"
                 android:textSize="@dimen/total_recycler_text_size" />
-        </com.q20.projectsummer.ResponsiveViews.ResponsiveCardView>
+        </com.non_android_programmers.responsivegui.ResponsiveCardView>
 
-        <com.q20.projectsummer.ResponsiveViews.ResponsiveRelativeLayout
+        <com.non_android_programmers.responsivegui.ResponsiveRelativeLayout
             android:layout_width="72dp"
             android:layout_height="72dp"
             android:layout_marginLeft="297dp"
@@ -136,10 +136,10 @@
                 android:layout_marginTop="0dp"
                 android:scaleType="centerInside"
                 android:src="@drawable/dice" />
-        </com.q20.projectsummer.ResponsiveViews.ResponsiveRelativeLayout>
+        </com.non_android_programmers.responsivegui.ResponsiveRelativeLayout>
 
 
-    </com.q20.projectsummer.ResponsiveViews.ResponsiveCardView>
+    </com.non_android_programmers.responsivegui.ResponsiveCardView>
 
     <com.q20.projectsummer.Custom.AutoResizeTextViewWithIrsansFont
         android:layout_width="match_parent"
@@ -150,7 +150,7 @@
         android:text="@string/friends"
         android:textSize="@dimen/total_recycler_text_size" />
 
-    <com.q20.projectsummer.ResponsiveViews.ResponsiveFrameLayout
+    <com.non_android_programmers.responsivegui.ResponsiveFrameLayout
         android:id="@+id/find_rival_fragment_container"
         android:layout_width="379dp"
         android:layout_height="398dp"
