--- a/app/src/main/res/layout/activity_profile_image.xml
+++ b/app/src/main/res/layout/activity_profile_image.xml
@@ -7,7 +7,7 @@
     android:background="@color/colorA7"
     tools:context="com.q20.projectsummer.ui.ProfileImageActivity">
 
-    <com.q20.projectsummer.ResponsiveViews.ResponsiveRelativeLayout
+    <com.non_android_programmers.responsivegui.ResponsiveRelativeLayout
         android:layout_width="105dp"
         android:layout_height="105dp"
         android:layout_gravity="center"
@@ -15,14 +15,14 @@
         android:layout_marginTop="16dp"
         android:background="@drawable/profile_image_images_layout_shape">
 
-        <com.q20.projectsummer.ResponsiveViews.ResponsiveImageView
+        <com.non_android_programmers.responsivegui.ResponsiveImageView
             android:id="@+id/profile_image_page_main_image_image_view"
             android:layout_width="@dimen/profile_image_page_image_size"
             android:layout_height="@dimen/profile_image_page_image_size"
             android:layout_gravity="center"
             android:layout_margin="5dp"
             android:src="@drawable/char_m_40" />
-    </com.q20.projectsummer.ResponsiveViews.ResponsiveRelativeLayout>
+    </com.non_android_programmers.responsivegui.ResponsiveRelativeLayout>
 
     <com.q20.projectsummer.Custom.AutoResizeTextViewWithAfsanehFont
         android:layout_width="379dp"
@@ -35,7 +35,7 @@
         android:textColor="@color/colorA17"
         android:textSize="@dimen/total_recycler_text_size" />
 
-    <com.q20.projectsummer.ResponsiveViews.ResponsiveViewPager
+    <com.non_android_programmers.responsivegui.ResponsiveViewPager
         android:id="@+id/profile_page_view_pager"
         android:layout_width="379dp"
         android:layout_height="460dp"
@@ -43,7 +43,7 @@
         android:layout_marginTop="170dp"
         android:background="@color/colorA7" />
 
-    <com.q20.projectsummer.ResponsiveViews.ResponsiveInkPageIndicator
+    <com.non_android_programmers.responsivegui.ResponsiveInkPageIndicator
         android:id="@+id/profile_image_indicator"
         android:layout_width="411dp"
         android:layout_height="20dp"
