--- a/app/src/main/res/layout/fragment_find_rival_page.xml
+++ b/app/src/main/res/layout/fragment_find_rival_page.xml
@@ -5,7 +5,7 @@
     tools:context=".ui.FindRivalPageFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <com.q20.projectsummer.ResponsiveViews.ResponsiveRecyclerView
+    <com.non_android_programmers.responsivegui.ResponsiveRecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/find_rival_recycler"
