--- a/app/src/main/res/layout/fragment_ranking_page_aroundme.xml
+++ b/app/src/main/res/layout/fragment_ranking_page_aroundme.xml
@@ -6,7 +6,7 @@
 
     <!-- TODO: Update blank fragment layout -->
 
-    <com.q20.projectsummer.ResponsiveViews.ResponsiveRecyclerView
+    <com.non_android_programmers.responsivegui.ResponsiveRecyclerView
         android:id="@+id/ranking_page_aroundme_recycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
