--- a/app/src/main/res/layout/fragment_ranking_page_weekly.xml
+++ b/app/src/main/res/layout/fragment_ranking_page_weekly.xml
@@ -5,7 +5,7 @@
     tools:context="com.q20.projectsummer.ui.RankingPageWeeklyFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <com.q20.projectsummer.ResponsiveViews.ResponsiveRecyclerView
+    <com.non_android_programmers.responsivegui.ResponsiveRecyclerView
         android:id="@+id/ranking_page_weekly_recycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
